<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vdb2pc</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="jozsefpalmieri@hotmail.com">root</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>pcl_conversions</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl</depend>
  <depend>tbb</depend>
  <depend>openvdb</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
